--- a/complete/responsive/page.html
+++ b/complete/responsive/page.html
@@ -3,8 +3,7 @@
 <html>
   <head>
     <title>Responsive Site Maybe?</title>
-    <link href="responsive-style.css" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
